kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: no-privileged
    match:
      any:
      - resources:
          kinds: [Pod]
          namespaces: ["default", "demo-sec"]
    validate:
      message: "BLOCKED by Kyverno: privileged containers not allowed"
      pattern:
        spec:
          containers:
          - =(securityContext):
              =(privileged): false
